--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,43 +1,30 @@
-# Use Python 3.11 slim image
 FROM python:3.11-slim
 
-# Set working directory
+# Optional system dependencies for scientific stack performance
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+  && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    ENVIRONMENT=production \
-    DEBUG=false
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements first for better caching
-COPY requirements.txt .
-
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt ./requirements.txt
+RUN pip install --no-cache-dir --upgrade pip \
+  && pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy backend source
 COPY . .
 
-# Create necessary directories
-RUN mkdir -p logs data database
+# Create runtime directories
+RUN mkdir -p data logs database
 
-# Create non-root user
-RUN useradd --create-home --shell /bin/bash app && \
-    chown -R app:app /app
-USER app
+# Environment
+ENV HOST=0.0.0.0
+ENV PORT=7860
 
-# Expose port
-EXPOSE 8003
+EXPOSE 7860
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8003/health || exit 1
+# Start FastAPI with Uvicorn
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
 
-# Start the application
-CMD ["python", "start_production.py"]
+
